# cyros-builder

./: README.md  build-cortos  compile_commands.json  pyproject.toml
cortos_builder/: actions.py  cli.py  compdb.py  component.py  coverage.py  executor.py  include_tree.py  manifest.py  model.py  module_map.py  module_scan.py  output.py  package.py  planner.py  profile.py  project_model.py  resolve.py  source_discovery.py  test_planner.py  test_runner.py  toolchain.py  ui.py
cortos_builder/commands/: __init__.py  base.py  build.py  clean.py  export_includes.py  gen_db.py  list_components.py  list_profiles.py  list_toolchains.py  show.py  test.py
cyros_builder/: coverage.py  output.py  planner.py  project_model.py  test_model.py  test_planner.py  test_runner.py
cyros_builder/commands/: test.py
examples/profiles/: example1.toml
profiles/: example1.toml
src/kernel/: component.toml  kernel.hpp  thread.cpp  thread.cppm  thread.hpp
src/libcortos/: component.toml  sync.cpp
src/libcortos/sync/: feature.toml  mutex.hpp  sync.cpp  sync.cppm
src/libcortos/timed_sync/: feature.toml  timed_mutex.hpp  timed_sync.cpp
src/port/: component.toml
src/port/boost/: port.cpp  port.toml  port_traits.h
src/port/cortex_m/: port.toml  port_traits.h
src/time/: component.toml
src/time/simulation/: simulation.hpp  tick.cpp  time.hpp  time_driver.toml
toolchains/: clang-base.toml  clangd.toml  gcc-base.toml  gcc-coverage.toml  gcc-debug.toml  gcc-release.toml
