[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortos-builder"
version = "0.1.0"
description = "A Python build tool for CoRTOS"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Ryan Cornish" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Environment :: Console",
  "Topic :: Software Development :: Build Tools"
]
dependencies = []

[project.scripts]
build-cortos = "cortos_builder.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["cortos_builder*"]
